# clp-hooks

./: README.md  clp.c  swap.c  swap.h  withdraw.h
backend/: .env template  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/.github/workflows/: docker-push.yml
backend/app/: main.py
backend/app/models/: __init__.py  annotations.py  requests.py  responses.py
backend/app/routers/: __init__.py  account.py  clp.py  redis_test.py  swap.py
backend/common/: config.py  constants.py
backend/database/: redis.py
backend/etl/: main.py
backend/etl/xrpl/: exchange_rate.py
backend/xrpledger/: client.py  models.py  request.py  transaction.py
backend/xrpledger/data/: tokens.json
include/: constants.h  deposit.h
src/: clp.c  deposit.c  macros.h  withdraw.c
